<resources>
    <string name="app_name">매칭튜터</string>
    <string name="common_button_retry">재시도</string>
    <string name="common_button_done">완료</string>
    <string name="common_button_next">다음</string>
    <string name="common_button_sign_up">매칭 튜터 시작하기</string>
    <string name="common_button_confirm">확인</string>
    <string name="common_button_more">더 보기</string>
    <string name="common_button_go_to_shop">코인 충전하러가기</string>
    <string name="common_button_close">닫기</string>
    <string name="common_button_ok">예</string>
    <string name="common_button_no">아니오</string>
    <string name="common_button_cancel">취소</string>
    <string name="common_button_crop">사용</string>
    <string name="common_sign_out">로그아웃</string>
    <string name="common_age_choose">생년</string>
    <string name="common_gender_choose">성별</string>
    <string name="common_university_choose">학교 검색</string>
    <string name="common_university_status_choose">선택</string>
    <string name="common_major_choose">학과</string>
    <string name="common_choose">선택하세요</string>
    <string name="common_level_choose">상/중/하</string>
    <string name="common_career_choose">총 년</string>
    <string name="common_class_time_choose">하루 수업 시간</string>
    <string name="common_class_type_choose">개인/그룹</string>
    <string name="common_class_available_count_choose">주 회</string>
    <string name="common_available_days_of_week_choose">희망 요일 선택</string>
    <string name="common_sign_dialog_message">정말 로그아웃 하시겠습니까?</string>
    <string name="common_error_title">오류</string>
    <string name="common_error_message_network">네트워크 연결이 좋지 않습니다. 연결 상태를 확인해주세요</string>
    <string name="common_error_message_unknown">알 수 없는 오류가 발생했습니다. 리버옥션으로 문의주세요</string>
    <string name="common_mon">월</string>
    <string name="common_mon_long">월요일</string>
    <string name="common_tue">화</string>
    <string name="common_tue_long">화요일</string>
    <string name="common_wed">수</string>
    <string name="common_wed_long">수요일</string>
    <string name="common_thu">목</string>
    <string name="common_thu_long">목요일</string>
    <string name="common_fri">금</string>
    <string name="common_fri_long">금요일</string>
    <string name="common_sat">토</string>
    <string name="common_sat_long">토요일</string>
    <string name="common_sun">일</string>
    <string name="common_sun_long">일요일</string>
    <string name="common_anything">무관</string>
    <string name="common_year">년</string>
    <string name="common_price_unit">원</string>
    <string name="common_price_big_unit">%1$d만원</string>
    <string name="common_count_unit">회</string>
    <string name="common_shop_item_count_unit">%d개월</string>
    <string name="common_shop_item_price_unit">%s원</string>
    <string name="common_class_available_count_unit">주 %1$d 회</string>
    <string name="common_count_time">시간</string>
    <string name="common_count_time_unit" formatted="false">하루 %.1f 시간</string>
    <string name="common_grade_unit">%1$d학년</string>
    <string name="common_error_network_disconnected">인터넷 연결 상태가 좋지 않습니다</string>
    <string name="common_gender_male_short">(남)</string>
    <string name="common_gender_female_short">(여)</string>
    <string name="common_in_school">재학</string>
    <string name="common_preferred_gender_choose">희망 성별</string>
    <string name="common_leave_of_absence">휴학</string>
    <string name="common_graduation">졸업</string>
    <string name="common_phone_number">010-XXXX-XXXX</string>
    <string name="common_preferred_subjects">희망과목</string>
    <string name="common_subject_group_curriculum_subject">교과목</string>
    <string name="common_subject_group_foreign_language">외국어</string>
    <string name="common_subject_group_music">음악</string>
    <string name="common_career">과외 경력</string>
    <string name="common_available_days_of_week">수업 가능 요일</string>
    <string name="common_class_available_count">수업 가능 횟수</string>
    <string name="common_class_time">희망 수업 시간</string>
    <string name="common_remain">남음</string>
    <string name="common_person_count_unit">%1$d명</string>
    <string name="common_remain_unit">%1$s 남음</string>
    <string name="common_student_department_type">계열</string>
    <string name="common_select_all">전체선택</string>
    <string name="menu_filter_initialization">초기화</string>
    <string name="enter_phone_number_action_bar_title">인증 번호 입력</string>
    <string name="enter_phone_number_description">본인 인증을 위해\n 휴대폰 번호를 입력 하세요</string>
    <string name="enter_phone_number_error_message">본인 인증을 위해 휴대폰 번호를 입력 하세요</string>
    <string name="enter_phone_number_hint">휴대폰 번호 입력</string>
    <string name="enter_phone_number_next_button">인증 번호 받기</string>
    <string name="enter_phone_number_code_error_message">인증 번호를 입력하세요</string>
    <string name="enter_phone_number_code_action_bar_title">인증 하기</string>
    <string name="enter_phone_number_code_description">%s로 인증번호를 보냈습니다</string>
    <string name="enter_phone_number_code_hint">인증번호를 입력하세요</string>
    <string name="enter_phone_number_code_next_button">인증 하기</string>
    <string name="lesson_detail_preferred_price">희망 금액</string>
    <string name="lesson_detail_preferred_price_with_my_price">희망 금액/내 입찰가</string>
    <string name="lesson_detail_bidding_count">참여 인원</string>
    <string name="intro_next_button">건너뛰기</string>
    <string name="intro_sign_in">로그인</string>
    <string name="intro_sign_up_teacher">선생님 가입하기</string>
    <string name="intro_sign_up_student">학부모&amp;학생 가입하기</string>
    <string name="insufficient_coins_dialog_title">열쇠 부족</string>
    <string name="insufficient_coins_dialog_message">열쇠가 부족합니다. 구매후에 재시도해주세요</string>
    <string name="intro_sign_in_error_dialog_title">로그인 오류</string>
    <string name="intro_sign_in_error_dialog_message">아이디 혹은 패스워드가 잘못되었습니다</string>
    <string name="sign_up_teacher_info_label">선생님 정보</string>
    <string name="sign_up_teacher_email_password_label">아이디/비밀번호</string>
    <string name="sign_up_teacher_university_label">학교/학과/상태</string>
    <string name="sign_up_teacher_location_label">주소</string>
    <string name="sign_up_lesson_info_career_label">과외 경력</string>
    <string name="sign_up_lesson_info_preferred_subjects_label">과외 희망 과목</string>
    <string name="sign_up_lesson_info_condition_label">과외 희망 요일/수업 시간/희망 성별</string>
    <string name="sign_up_lesson_info_preferred_price_label">희망 금액</string>
    <string name="sign_up_lesson_info_description_label">경력/수업 방식 소개</string>
    <string name="sign_up_lesson_info_student_description_label">과외 희망 사항</string>
    <string name="sign_up_student_status_label">학년/계열</string>
    <string name="sign_up_student_level_label">학업 수준</string>
    <string name="sign_up_student_info_label">학생 정보</string>
    <string name="sign_up_basic_info_action_bar_title">기본 정보 변경</string>
    <string name="sign_up_lesson_info_action_bar_title">과외 정보 변경</string>
    <string name="sign_up_student_status_hint">초/중/고</string>
    <string name="sign_up_grade_hint">학년</string>
    <string name="sign_up_department_hint">계열</string>
    <string name="sign_up_email_hint">아이디(이메일)</string>
    <string name="sign_up_password_hint">비밀번호</string>
    <string name="sign_up_password_check_hint">비밀번호 재입력</string>
    <string name="sign_up_name_hint">이름</string>
    <string name="sign_up_phone_number_hint">폰번호를 입력하세요(ex: 01012345678)</string>
    <string name="sign_up_phone_address_hint">주소를 검색하세요</string>
    <string name="sign_up_phone_preferred_price_hint">희망 금액을 입력</string>
    <string name="sign_up_teacher_description_hint">경력, 수업방식을 소개해주세요</string>
    <string name="sign_up_student_description_hint">희망 사항을 입력해주세요</string>
    <string name="sign_up_gender_man">남성</string>
    <string name="sign_up_gender_woman">여성</string>
    <string name="sign_up_age_year">년</string>
    <string name="sign_up_available_subjects_hint">희망 과목 선택</string>
    <string name="sign_up_subject_korea">국어</string>
    <string name="sign_up_subject_english">영어</string>
    <string name="sign_up_subject_math">수학</string>
    <string name="sign_up_subject_science">과학</string>
    <string name="sign_up_subject_society">사회</string>
    <string name="sign_up_subject_discussion">논술</string>
    <string name="sign_up_subject_english_conversation">영어회화</string>
    <string name="sign_up_subject_chinese_conversation">중국어</string>
    <string name="sign_up_career_0">1년 미만</string>
    <string name="sign_up_career_1">1년</string>
    <string name="sign_up_career_2">2년</string>
    <string name="sign_up_career_3">3년</string>
    <string name="sign_up_career_4">4년</string>
    <string name="sign_up_career_5">5년</string>
    <string name="sign_up_career_6">5년 이상</string>
    <string name="sign_up_level_high">상</string>
    <string name="sign_up_level_middle">중</string>
    <string name="sign_up_level_low">하</string>
    <string name="sign_up_class_type_group">그룹</string>
    <string name="sign_up_class_type_individual">개인</string>
    <string name="sign_up_student_status_kindergarten">유치원</string>
    <string name="sign_up_student_status_elementary_school">초등학교</string>
    <string name="sign_up_student_status_middle_school">중학교</string>
    <string name="sign_up_student_status_high_school">고등학교</string>
    <string name="sign_up_student_status_university">대학생</string>
    <string name="sign_up_student_status_retry_university">재수</string>
    <string name="sign_up_student_status_ordinary">일반인</string>
    <string name="sign_up_department_type_liberal_arts">문과</string>
    <string name="sign_up_department_type_natural_sciences">이과</string>
    <string name="sign_up_department_type_art_music_physical">예체능</string>
    <string name="sign_up_department_type_commercial_and_technical">실업계</string>
    <string name="sign_up_department_type_none">미정</string>
    <string name="sign_up_error_dialog_title">가입 오류</string>
    <string name="sign_up_error_dialog_check_email_message">이메일을 작성해주세요</string>
    <string name="sign_up_error_dialog_check_password_message">비밀번호를 작성해주세요</string>
    <string name="sign_up_error_dialog_check_password_check_message">비밀번호가 일치하지 않습니다</string>
    <string name="sign_up_error_dialog_check_name_message">이름을 작성해주세요</string>
    <string name="sign_up_error_dialog_check_phone_number_message">핸드폰 번호를 작성해주세요</string>
    <string name="sign_up_error_dialog_check_phone_number_only_integer_message">핸드폰 번호에 숫자만 입력해주세요</string>
    <string name="sign_up_error_dialog_check_gender_message">성별을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_age_message">출생년도를 선택해주세요</string>
    <string name="sign_up_error_dialog_check_address_message">주소를 작성해주세요</string>
    <string name="sign_up_error_dialog_check_university_message">출신대학을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_major_message">전공을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_university_status_message">학년을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_student_status_message">학교를 선택해주세요</string>
    <string name="sign_up_error_dialog_check_grade_message">학년을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_department_type_message">계열을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_subject_message">과목을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_career_message">과외경력을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_day_of_week_message">수업 가능 요일을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_class_available_count_message">수업 가능 횟수를 선택해주세요</string>
    <string name="sign_up_error_dialog_check_class_time_message">하루 수업 시간을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_preferred_gender_message">희망 성별을 선택해주세요</string>
    <string name="sign_up_error_dialog_check_preferred_price_message">희망 과외 금액을 작성해주세요</string>
    <string name="filter_apply_button">검색</string>
    <string name="filter_reset_button">초기화</string>
    <string name="select_price_unit">만원</string>
    <string name="select_gender_description">희망하는 성별을 선택하세요</string>
    <string name="filter_no_gender">무관</string>
</resources>