<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_small"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="40dp"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/intro_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_up_email_hint"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/intro_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:inputType="textPassword"
            android:hint="@string/sign_up_password_hint"/>

        <TextView
            style="@style/LightishBlueButton"
            android:id="@+id/intro_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/intro_sign_in"/>

        <TextView
            style="@style/LeafyGreenButton"
            android:id="@+id/intro_sign_up_student_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/intro_sign_up_student"/>

        <TextView
            style="@style/LeafyGreenButton"
            android:id="@+id/intro_sign_up_teacher_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/intro_sign_up_teacher"/>
    </LinearLayout>
</ScrollView>