<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center"
        android:textSize="13sp"
        android:textColor="@color/river_auction_greyish"
        android:text="@string/select_gender_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/select_gender_man"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center"
                android:textColor="@color/select_gender_text_color"
                android:text="@string/sign_up_gender_man"
                android:background="@drawable/bg_select_gender"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="13dp"
                android:background="@color/river_auction_warm_grey_two"/>

            <TextView
                android:id="@+id/select_gender_woman"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center"
                android:textColor="@color/select_gender_text_color"
                android:text="@string/sign_up_gender_woman"
                android:background="@drawable/bg_select_gender"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="13dp"
                android:background="@color/river_auction_warm_grey_two"/>

            <TextView
                android:id="@+id/select_gender_none"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center"
                android:textColor="@color/select_gender_text_color"
                android:text="@string/filter_no_gender"
                android:background="@drawable/bg_select_gender"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>